--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,8 @@
     ],
     "require": {
         "php": "^7.2 || ^8.0",
-        "socialiteproviders/manager": "~4.0",
-        "laravel/socialite": "~4.0|~5.0",
-        "illuminate/support": "^6.0|^7.0|^8.0"
+        "laravel/socialite": "~4.0 || ~5.0",
+        "socialiteproviders/manager": "~4.0"
     },
     "autoload": {
         "psr-4": {
