--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "docs": "https://socialiteproviders.com/tiktok"
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0",
         "socialiteproviders/manager": "~4.0"
     },
     "autoload": {
